kubernetes/apps/podinfo/namespace-podinfo.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: podinfo
  labels:
    cert-manager-tls: wild
