kubernetes/apps/podinfo/ingress-podinfo.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: podinfo
  namespace: podinfo
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - test.themisha.dev
  rules:
    - host: test.themisha.dev
      http:
        paths:
          - path: /podinfo/(.*)
            pathType: Prefix
            backend:
              service:
                name: podinfo
                port:
                  number: 9898
